--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@codesandbox/sandpack-react": "^2.19.7",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-separator": "^1.1.0",
@@ -22,10 +23,12 @@
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
+    "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
+    "react-tweet": "^3.2.1",
     "rehype-pretty-code": "^0.13.2",
     "rehype-stringify": "^10.0.0",
     "remark-parse": "^11.0.0",
