--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "framer-motion": "^11.5.4",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.395.0",
-    "next": "14.2.4",
+    "next": "^14.2.10",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.3.0",
+    "next-view-transitions": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
@@ -34,6 +35,7 @@
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.0",
     "shiki": "^1.16.2",
+    "sugar-high": "^0.7.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "unified": "^11.0.5"
